[package]
name = "shapelib-rs"
version = "0.2.1" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "Rust crate shapelib-rs supports ESRI J shapefile (C bindings)"
keywords = ["shape", "contour", "geo", "science", "2D"]
categories = ["graphics", "science", "science::geo", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/shapelib-rs/"
homepage = "https://crates.io/crates/shapelib-rs"
repository = "https://github.com/nomissbowling/shapelib-rs"

readme = "README.md"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shapelib"

[dependencies]
asciiz = { version = "0.1" }
encoding_rs = { version = "0.8.33" }

[build-dependencies]
cc = "1.0.79"
bindgen = "0.65.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
